Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Information & Communication Engineering student at Bangladesh University of Professionals. I build web platforms, mobile applications, and explore data-driven AI solutions.
             </p>
             <div class="flex flex-wrap justify-center md:justify-start gap-4">
-                <a href="assets/Mohsin_CV.pdf" target="_blank" class="bg-neutral-900 dark:bg-neutral-100 text-white dark:text-neutral-900 hover:bg-neutral-800 dark:hover:bg-white px-6 py-3 rounded-lg font-medium transition shadow-sm">View Resume</a>
+                <a href="assets/mohsin-resume.pdf" target="_blank" class="bg-neutral-900 dark:bg-neutral-100 text-white dark:text-neutral-900 hover:bg-neutral-800 dark:hover:bg-white px-6 py-3 rounded-lg font-medium transition shadow-sm">View Resume</a>
                 <a href="#projects" class="bg-surface-light dark:bg-surface-dark border border-neutral-200 dark:border-neutral-700 px-6 py-3 rounded-lg font-medium hover:bg-neutral-50 dark:hover:bg-neutral-800 transition">View Projects</a>
             </div>
         </div>
